--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 libc = "0.2.177"
 libpulse-binding = "2.30.1"
 libpulse-simple-binding = "2.29.0"
+opus = "0.3.0"
 
 [build-dependencies]
 pkg-config = "0.3.32"
