--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,15 @@ edition = "2024"
 build = "build.rs"
 
 [dependencies]
+env_logger = "0.11.8"
 libc = "0.2.177"
 libpulse-binding = "2.30.1"
 libpulse-simple-binding = "2.29.0"
+log = "0.4.28"
 opus = "0.3.0"
+quinn = "0.11.9"
 rand = "0.9.2"
+tokio = { version = "1.48.0", features = ["full"] }
 
 [build-dependencies]
 pkg-config = "0.3.32"
