--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ log = "0.4.28"
 opus = "0.3.0"
 quinn = "0.11.9"
 rand = "0.9.2"
+ratatui = "0.29.0"
 tokio = { version = "1.48.0", features = ["full"] }
 
 [build-dependencies]
