--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ tokio = { version = "1.48.0", features = ["full"] }
 
 [build-dependencies]
 pkg-config = "0.3.32"
+
+#[profile.release]
+#debug = "line-tables-only"
