--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,5 @@ tokio = { version = "1.48.0", features = ["full"] }
 [build-dependencies]
 pkg-config = "0.3.32"
 
-#[profile.release]
-#debug = "line-tables-only"
+[profile.release]
+debug = "line-tables-only"
