the big rewrite

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 build = "build.rs"
 
 [dependencies]
+bincode = "2.0.1"
 env_logger = "0.11.8"
 libc = "0.2.177"
 libpulse-binding = "2.30.1"
