--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,13 @@ edition = "2024"
 build = "build.rs"
 
 [dependencies]
-bincode = "2.0.1"
+bincode = { version = "2.0.1", features = ["std", "alloc", "derive"]}
 env_logger = "0.11.8"
 libc = "0.2.177"
 libpulse-binding = "2.30.1"
 libpulse-simple-binding = "2.29.0"
 log = "0.4.28"
 opus = "0.3.0"
-quinn = "0.11.9"
 rand = "0.9.2"
 ratatui = "0.29.0"
 tokio = { version = "1.48.0", features = ["full"] }
@@ -20,5 +19,5 @@ tokio = { version = "1.48.0", features = ["full"] }
 [build-dependencies]
 pkg-config = "0.3.32"
 
-[profile.release]
-debug = "line-tables-only"
+#[profile.release]
+#debug = "line-tables-only"
