--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ log = "0.4.28"
 opus = "0.3.0"
 rand = "0.9.2"
 ratatui = "0.29.0"
+rubato = "0.16.2"
+symphonia = { version = "0.5.5", features = ["mp3"] }
 tokio = { version = "1.48.0", features = ["full"] }
 
 [build-dependencies]
